--- a/css/styles.scss
+++ b/css/styles.scss
@@ -9,37 +9,14 @@
   -ms-overflow-style: none; /*  IE & Edge  */
   scrollbar-width: none; /*  firefox  */
 }
-//body {
-//color: #fff;
-//background: #080f0f;
-//}
-
-#circularcursor {
-  background: #04773b;
-  border: 1px solid black;
-  height: 30px;
-  width: 30px;
-  top: 0;
-  left: 0;
-  border-radius: 50%;
-  -moz-border-radius: 50%;
-  -webkit-border-radius: 50%;
-  position: absolute;
-  z-index: 1;
-  pointer-events: none;
-}
 
 .headerSection {
   width: 100%;
   height: 15vh;
   position: fixed;
-  //z-index: 98;
   background: rgba(255, 255, 255, 0.94);
-  //border-radius: 16px;
-  //box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
-  //border: 2px solid #d82929f6;
   opacity: 1;
 
   .naviLinks {
@@ -54,25 +31,18 @@
     justify-content: space-evenly;
     list-style: none;
     background: #151515;
-    //border-radius: 16px;
-    //box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    //backdrop-filter: blur(5px);
-    //-webkit-backdrop-filter: blur(5px);
-    //border: 1px solid rgba(91, 120, 199, 0.3);
     opacity: 0;
     clip-path: circle(200px at 140% -5%);
     -webkit-clip-path: circle(200px at 140% -5%);
     transition: all 0.5s ease-out; // fading menu
 
     .navLi {
-      //border: 2px solid white;
       height: 100%;
       display: flex;
       align-items: center;
       justify-content: center;
 
       &:hover {
-        //background: #2a3f7a;
         background: #5b78c7;
       }
 
@@ -85,19 +55,14 @@
         color: #eceef4;
 
         &:hover {
-          //font-size: 4rem;
-          //font-weight: 800;
           text-decoration: underline;
           text-decoration-color: #fff;
-          //font-style: italic;
         }
-        //border: 2px solid red;
       }
     }
   }
 
   .naviLinks.openNav {
-    //display: inline;
     opacity: 1;
     clip-path: circle(2000px at 20% 10%);
     -webkit-clip-path: circle(2000px at 20% 10%);
@@ -110,15 +75,12 @@
     height: 100%;
     display: flex;
     align-items: center;
-    //z-index: 99;
-    //border: 2px solid red;
 
     ul {
       display: flex;
       align-items: center;
       flex: 1;
       list-style: none;
-      //border: 2px solid blue;
 
       .logo {
         font-size: 2rem;
@@ -128,14 +90,12 @@
       }
 
       .navToggle {
-        //position: absolute;
         margin-left: auto;
         padding: 5rem;
         z-index: 999;
 
         .toggleSvgOpen {
           font-size: 2rem;
-          //padding: 2rem;
           font-family: "Open Sans", sans-serif;
           font-weight: 600;
         }
@@ -167,7 +127,6 @@
   background: #080f0f;
   z-index: 99;
   display: flex;
-  //display: none;
   justify-content: center;
   align-items: center;
   opacity: 1;
@@ -185,7 +144,6 @@
 .mainSection {
   width: 100%;
   height: 100vh;
-  //border: 2px solid blue;
   background: #fff;
   display: flex;
   flex-direction: column;
@@ -208,20 +166,14 @@
       justify-content: center;
       flex-direction: column;
       text-align: center;
-      font-family: "Open Sans", sans-serif; //applies to anything in txtarea unless specified
-      //sborder: 1px solid red;
+      font-family: "Open Sans", sans-serif;
 
       .webdevTxt {
-        //if gsap scroll doesnt work then span outside of txtarea
         font-size: 6rem;
-        //text-decoration: underline;
-        //font-weight: 600;
-        //border: 1px solid green;
       }
 
       .mainP {
         font-size: 5rem;
-        //font-weight: 300;
         line-height: 1.5;
       }
     }
@@ -234,7 +186,6 @@
   display: flex;
   flex-direction: column;
   background: #fff;
-  //border: 2px solid red;
 
   .box1 {
     width: 100%;
@@ -243,7 +194,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    //border: 2px solid peru;
 
     .aboutH1 {
       font-size: 5rem;
@@ -255,9 +205,7 @@
 
   .box2 {
     width: 100%;
-    //height: auto;
     display: flex;
-    //border: 2px solid green;
 
     .aboutP {
       text-align: center;
@@ -265,8 +213,6 @@
       line-height: 2;
       font-family: "Poppins", sans-serif;
       padding: 8rem;
-
-      //border: 2px solid red;
     }
   }
 
@@ -280,7 +226,6 @@
     z-index: 99;
     background: #080f0f;
     border-radius: 5rem;
-    //box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 
     border: 0.8px solid #5b78c7;
     font-size: 4rem;
@@ -302,14 +247,11 @@
   width: 100vw;
   height: 80vh;
   display: flex;
-  //flex-direction: column;
   align-items: center;
-  // border: 2px solid red;
 
   .projectTxt {
     width: 50%;
     height: 100%;
-    //border: 2px solid green;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -324,14 +266,10 @@
     }
 
     .projectP {
-      //padding: 2rem;
-      //border: 1px solid pink;
       font-size: 2rem;
       font-family: "Poppins", sans-serif;
       text-align: center;
       line-height: 2;
-
-      //color: #1c1d20;
     }
   }
 
@@ -348,8 +286,6 @@
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(255, 255, 255, 0.3);
-    // padding: 2.5rem;
-    //border: 2px solid blue;
 
     .mainTools,
     .supTools {
@@ -361,16 +297,9 @@
       justify-content: center;
       align-items: center;
 
-      //overflow: hidden;
-      //padding: 1rem;
-      //border: 2px solid green;
-
       .svgPack {
         display: flex;
         justify-content: center;
-
-        //border: 1px solid red;
-        //padding: 1.5rem;
 
         .toolsBundle {
           display: flex;
@@ -378,7 +307,6 @@
           align-items: center;
           padding: 1.5rem;
           font-family: "Poppins", sans-serif;
-          //border: 1px solid rgb(225, 0, 255);
           p {
             font-size: 2rem;
           }
@@ -397,7 +325,7 @@
   justify-content: center;
   text-align: center;
   padding: 8rem;
-  //border: 1px solid blue;
+
   h1 {
     font-size: 5rem;
     font-family: "Open Sans", sans-serif;
@@ -405,25 +333,19 @@
   }
   p {
     font-family: "Poppins", sans-serif;
-    //padding: 10rem;
     line-height: 2;
     font-size: 2rem;
-
-    //border: 2px solid green;
   }
 }
 
 .projectDesktop {
   height: 100vh;
   width: 100%;
-  //border: 1px solid blue;
   display: flex;
 
   .cardTxtContainer {
     width: 50%;
-    //border: red 2px solid;
     height: 100vh;
-    //outline:1px solid green;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -433,7 +355,6 @@
     h1 {
       font-size: 3rem;
       font-family: "Open Sans", sans-serif;
-      //color: #151515;
     }
 
     p {
@@ -458,19 +379,15 @@
       margin-top: 2rem;
 
       &:hover {
-        //color: #fff;
         background: #5b78c7;
-        //opacity: 1;
         cursor: pointer;
       }
     }
   }
 
   .cardImgContainer {
-    //border: 2px solid violet;
     width: 50%;
     background: rgba(255, 255, 255, 0.41);
-    //border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
@@ -482,7 +399,6 @@
     .photo {
       width: 80%;
       height: 80%;
-      //border: 1px solid red;
 
       img {
         width: 100%;
@@ -492,13 +408,11 @@
   }
 
   .topSection {
-    //border: 1px solid red;
     border-top-right-radius: 2rem;
     border-top-left-radius: 2rem;
   }
 
   .bottomSection {
-    //border: 1px solid red;
     border-bottom-right-radius: 2rem;
     border-bottom-left-radius: 2rem;
   }
@@ -513,27 +427,20 @@
   height: 60vh;
   display: flex;
   justify-content: center;
-
-  //border: 2px solid greenyellow;
   background: #fff;
 
   .txtBox {
     width: 100%;
     height: 100%;
-    //margin: 2%;
-    //border: 2px solid violet;
     display: flex;
     text-align: center;
-    //align-items: center;
     justify-content: center;
     flex-direction: column;
     padding: 8rem;
 
     h1 {
       font-family: "Open Sans", sans-serif;
-      //color: #1c1d20;
       font-size: 5rem;
-      //font-weight: 600;
       margin-bottom: 0.8rem;
     }
 
@@ -541,7 +448,6 @@
       font-family: "Poppins", sans-serif;
       font-size: 2rem;
       line-height: 2;
-      //margin-right: 5rem;
     }
   }
 }
@@ -550,12 +456,8 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  // border-radius: 30px 30px 0 0;
   flex-direction: column;
   align-items: center;
-  //justify-content: center;
-  //background: #080f0f;
-  //box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 
   .footBox1 {
     width: 100%;
@@ -566,26 +468,20 @@
     align-items: center;
     text-align: center;
 
-    //border: 2px solid red;
     h1 {
       font-family: "Open Sans", sans-serif;
-      //color: #fff;
       font-size: 6rem;
       font-weight: 600;
-      //margin-bottom: 1rem;
     }
 
     p {
       font-family: "Poppins", sans-serif;
       font-size: 2rem;
-      //color: #fff;
       line-height: 2;
       padding: 8rem;
-      //margin-right: 5rem;
     }
   }
 
-  //original state
   .footBox2 {
     width: 100%;
     height: 20%;
@@ -593,26 +489,18 @@
     flex-direction: column;
     background: #080f0f;
     padding: 2rem;
-    //align-items: center;
-    //justify-content: space-evenly;
-    //border: 2px solid red;
 
     .socialLinks {
       width: 100%;
       height: 50%;
       display: flex;
-      //flex-direction: column;
       justify-content: center;
       color: #fff;
-      //font-size: 2rem;
       font-family: "Poppins", sans-serif;
       align-items: center;
-      //border: 1px solid white;
 
       li {
         list-style: none;
-        //line-height: 1.5;
-        //border: 1px solid red;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -631,7 +519,6 @@
           text-decoration: none;
           color: #fff;
           font-size: 1.5rem;
-          //font-weight: 200;
         }
       }
     }
@@ -639,7 +526,6 @@
     .copyRightDiv {
       width: 100%;
       height: 50%;
-      //border: 1px solid green;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -654,9 +540,6 @@
 }
 
 @media screen and (max-width: 768px) {
-  #circularcursor {
-    display: none;
-  }
   .headerSection {
     width: 100vw;
     .naviLinks {
@@ -675,35 +558,29 @@
   .mainSection {
     width: 100vw;
     height: 100vh;
-    //border: 2px solid #5b78c7;
 
     .txtContainer {
       .txtArea {
-        //border: 1px solid green;
         width: 100%;
         padding: 5rem;
 
         .picContainer {
-          //border: 1px solid pink;
           padding: 2rem;
         }
 
         .webdevTxt {
           font-size: 3rem;
-          //text-align: center;
           font-weight: 600;
         }
 
         .mainP {
           font-size: 3rem;
-          //line-height: ;
         }
       }
     }
   }
 
   .aboutSection {
-    //border: 1px solid red;
     .box1 {
       .profilePic {
         width: 250px;
@@ -718,7 +595,6 @@
     .box2 {
       .aboutP {
         padding: 5rem;
-        //font-size: 2.5rem;
       }
     }
   }
@@ -726,7 +602,6 @@
   .projectSection {
     height: 140vh;
     flex-direction: column;
-    //border: 2px solid green;
 
     .projectTxt {
       width: 100%;
@@ -737,15 +612,9 @@
     .devTools {
       height: 50%;
       width: 100%;
-      //border: 2px solid green;
-      //flex-direction: column;
       .mainTools,
       .supTools {
-        //flex-direction: row;
-        //border: 1px solid blue;
-        //flex-wrap: wrap;
         .svgPack {
-          //border: 1px solid red;
           width: 55%;
           height: 100%;
           justify-content: space-evenly;
@@ -753,12 +622,9 @@
           flex-direction: row;
           flex-wrap: wrap;
           gap: 2.5rem;
-          //flex-grow: 1;
 
           .toolsBundle {
             flex: 1;
-            //border: 1px solid lightgreen;
-            //align-items: star;
             padding: 0.5rem;
           }
         }
@@ -770,9 +636,6 @@
     width: 100vw;
     height: 60vh;
     padding: 5rem;
-    //background: #2a3f7a;
-    //color: #fff;
-    //border: 2px solid purple;
   }
 
   .projectDesktop {
@@ -782,12 +645,8 @@
   .projectCardMobile {
     width: 100vw;
     height: 100%;
-    //border: 2px solid green;
     display: flex;
     flex-direction: column;
-    //justify-content: center;
-    //align-items: center;
-    //background: #151515;
 
     .mobileCards {
       width: 100%;
@@ -795,10 +654,8 @@
       padding: 2rem;
       box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
       background: #fff;
-      //margin-top: 3rem;
       margin-bottom: 10rem;
       border-radius: 3rem;
-      //align-items: center;
 
       img {
         width: 100%;
@@ -814,13 +671,11 @@
         justify-content: center;
         flex-direction: column;
         align-items: center;
-        //border: 2px solid lightblue;
         padding: 2rem;
 
         h1 {
           font-size: 3rem;
           font-family: "Open Sans", sans-serif;
-          //color: #;
         }
 
         p {
@@ -833,18 +688,14 @@
           height: 4rem;
           border: none;
           border-radius: 1rem;
-          //box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
           background: #080f0f;
           color: #fff;
           font-size: 2rem;
           font-family: "Poppins", sans-serif;
           margin-top: 2rem;
-          //opacity: 0.5;
 
           &:hover {
-            //color: #fff;
             background: #5b78c7;
-            //opacity: 1;
             cursor: pointer;
           }
         }
@@ -854,7 +705,6 @@
 
   .contactContainer {
     width: 100vw;
-    //height: 60vh;
     .txtBox {
       padding: 5rem;
 
