added tictactoe, need to update picture for it

--- a/css/styles.css
+++ b/css/styles.css
@@ -339,13 +339,23 @@
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   border: 1px solid rgba(255, 255, 255, 0.3);
+  margin-top: 2rem;
+}
+.projectDesktop .cardTxtContainer .cardBtns a {
+  text-decoration: none;
   font-size: 1.5rem;
   font-family: "Poppins", sans-serif;
-  margin-top: 2rem;
+  color: #fff;
+}
+.projectDesktop .cardTxtContainer .cardBtns a:visited {
+  color: #fff;
 }
 .projectDesktop .cardTxtContainer .cardBtns:hover {
   background: #5b78c7;
   cursor: pointer;
+}
+.projectDesktop .cardTxtContainer .cardBtns:hover a {
+  color: #fff;
 }
 .projectDesktop .cardImgContainer {
   width: 50%;
