--- a/css/styles.scss
+++ b/css/styles.scss
@@ -374,13 +374,25 @@
       backdrop-filter: blur(5px);
       -webkit-backdrop-filter: blur(5px);
       border: 1px solid rgba(255, 255, 255, 0.3);
-      font-size: 1.5rem;
-      font-family: "Poppins", sans-serif;
       margin-top: 2rem;
+
+      a {
+        text-decoration: none;
+        font-size: 1.5rem;
+        font-family: "Poppins", sans-serif;
+        color: #fff;
+      }
+
+      a:visited {
+        color: #fff;
+      }
 
       &:hover {
         background: #5b78c7;
         cursor: pointer;
+        a {
+          color: #fff;
+        }
       }
     }
   }
