--- a/cyberSwipe/css/style.css
+++ b/cyberSwipe/css/style.css
@@ -10,7 +10,8 @@
     background: blue;
     max-width: 100%;
     max-height: 100%;
-    font-family: "Bungee", sans-serif;
+    font-family: "Sniglet", system-ui;
+    
 }
 
 .assets{
